<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_email_recovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_recovery_email"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/background_edittext"
            android:hint="@string/example_email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email_recovery" />

        <TextView
            android:id="@+id/tv_register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/prompt_password"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/edt_recovery_email"
            app:layout_constraintTop_toBottomOf="@id/edt_recovery_email" />

        <EditText
            android:id="@+id/edt_register_password"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/background_edittext"
            android:hint="@string/prompt_password"
            android:padding="8dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/edt_recovery_email"
            app:layout_constraintStart_toStartOf="@id/tv_register_password"
            app:layout_constraintTop_toBottomOf="@id/tv_register_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/background_button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/edt_register_password"
            app:layout_constraintStart_toStartOf="@+id/edt_register_password"
            app:layout_constraintTop_toBottomOf="@+id/edt_register_password" />

        <TextView
            android:id="@+id/btn_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:padding="8dp"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            android:focusable="true" />

        <TextView
            android:id="@+id/btn_recovery_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:padding="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/recovery_account"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>