<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.auth.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar_recovery_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="18sp"
                    android:id="@+id/toolbar_create_account"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_account"
                    android:textColor="@color/white" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:layout_marginTop="24dp"
            android:paddingHorizontal="16dp"
            android:id="@+id/tv_email_recovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/prompt_email"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar_recovery_account" />

        <EditText
            android:layout_marginHorizontal="16dp"
            android:id="@+id/edt_recovery_email"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/background_edittext"
            android:hint="@string/example_email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_email_recovery"
            android:autofillHints="Email" />

        <TextView

            android:id="@+id/tv_register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/prompt_password"
            android:textColor="@color/white"
            android:layout_marginTop="24dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/edt_recovery_email"
            app:layout_constraintTop_toBottomOf="@id/edt_recovery_email" />

        <EditText
            android:id="@+id/edt_register_password"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/background_edittext"
            android:hint="@string/prompt_password"
            android:padding="8dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/edt_recovery_email"
            app:layout_constraintStart_toStartOf="@id/tv_register_password"
            app:layout_constraintTop_toBottomOf="@id/tv_register_password"
            android:autofillHints="Password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:backgroundTint="@null"
            android:background="@drawable/background_button"
            android:text="@string/create_account"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/edt_register_password"
            app:layout_constraintStart_toStartOf="@+id/edt_register_password"
            app:layout_constraintTop_toBottomOf="@+id/edt_register_password" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>